--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 
     <textarea placeholder="Message" name="" id="" cols="30" rows="10"></textarea>
 
-    <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=sonalirai161161@gmail.com"><input type="submit" class="btn" value="Send"></a>
+    <a href="mail to:sonalirai161161@gmail.com"><input type="submit" class="btn" value="Send"></a>
 
 </form>
 
